--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
+encoding//poll/poll/urls.py=utf-8
 encoding//poll/pollApp/models.py=utf-8
 encoding//poll/pollApp/views.py=utf-8
 encoding/analysis_project_authors.py=utf-8
