--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -4,3 +4,4 @@ encoding//poll/pollApp/models.py=utf-8
 encoding//poll/pollApp/views.py=utf-8
 encoding/analysis_project_authors.py=utf-8
 encoding/poll_script.py=utf-8
+encoding/sending_mail_to_developers.py=utf-8
